# what-is-love-baby-dont-hurt-me

./: README.md  justfile  pyproject.toml
tests/: test_smoke.py
what/: cli.py
wut/: cli.py
