[project]
name = "wut-is-luv"
version = "0.1.0"
requires-python = ">=3.11"

[project.scripts]
wut = "wut.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wut.cli:main"]

[tool.hatch.build.targets.sdist]
include = ["wut", "pyproject.toml", "README.md"]

[project.optional-dependencies]
test = ["pytest"]
