[project]
name = "wut-is-luv"
version = "0.1.2"
requires-python = ">=3.0"
readme = "README.md"
description = "bb dont hurt me"
license = { text = "MIT" }

[project.scripts]
wut = "wut.cli:main"

[project.urls]
Repository = "https://github.com/talnoznisky/wut-is-luv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wut"]

[tool.hatch.build.targets.sdist]
include = ["wut", "pyproject.toml", "README.md"]

[project.optional-dependencies]
test = ["pytest"]
